<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="total">Total: </string>
    <string name="edit_list_item_name">Name</string>
    <string name="edit_list_item_quantity">Quantity</string>
    <string name="edit_list_item_price">Price</string>
    <string name="edit_list_item_cancel_button">Cancel</string>
    <string name="edit_list_item_submit_button">Done</string>
    <string name="menu_str_new_item">New Item</string>
    <string name="menu_str_save">Save</string>
    <string name="menu_str_cancel">Cancel</string>
    <string name="context_menu_str_edit_item">Edit Item</string>
    <string name="context_menu_str_delete">Delete</string>
    <string name="context_menu_str_cancel">Cancel</string>

</resources>