<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditItem" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_list_item_name"
        android:textSize="24sp" />
    
    <EditText android:id="@+id/sl_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:inputType="textAutoComplete"
        android:hint="@string/hello_world" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_list_item_quantity"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sl_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hello_world"
        android:inputType="number"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_list_item_price"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sl_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hello_world"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:columnCount="1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="112dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/edit_list_item_cancel_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="112dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="@string/edit_list_item_submit_button" />

    </GridLayout>

</LinearLayout>